--- a/gearshift/src/main/res/values-de/strings.xml
+++ b/gearshift/src/main/res/values-de/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="app_name">Gear Shift</string>
-    <string name="title_torrent_detail">Torrent Detail</string>
+    <string name="title_torrent_detail">Torrent Details</string>
     
     <string name="done">Fertig</string>
     <string name="delete">Löschen</string>
