Removed unused name strings in russian translation, added new.

--- a/gearshift/src/main/res/values-ru/strings.xml
+++ b/gearshift/src/main/res/values-ru/strings.xml
@@ -7,7 +7,6 @@
     <string name="done">Готово</string>
     <string name="delete">Удалить</string>
     <string name="remove">Удалить торрент</string>
-    <string name="remove_data">Удалить торрент и файлы</string>
     <string name="resume">Возобновить</string>
     <string name="pause">Приостановить</string>
     <string name="stop">Остановить</string>
@@ -18,10 +17,6 @@
     <string name="copy">Копировать</string>
     
     <string name="number_dialog_delete">Delete a digit</string>
-    
-    <string name="status">Состояние</string>
-    <string name="speed_format">&lt;b>Загрузка&lt;/b>: %1$s/s%2$s&lt;br/>&lt;b>Отдача&lt;/b>: %3$s/s%4$s</string>
-    <string name="free_space_format">&lt;b>Места на диске&lt;/b>: %1$s</string>
     
     <string name="refresh">Обновить</string>
     <string name="alt_speed_label_on">Включить альтерн. скорости</string>
@@ -150,7 +145,7 @@
     <string name="status_more_downloading_speed_format">&#x2193; %1$s/s, &#x2191; %2$s/s</string>
     <string name="status_more_seeding_format">- подключено %1$d из %2$d пиров - &lt;i&gt;%3$s&lt;/i&gt;</string>
     <string name="status_more_seeding_speed_format">&#x2191; %1$s/s</string>
-    <string name="status_more_idle" />
+    <string name="status_more_idle">Ожидание</string>
 
     <string name="time_days">дней</string>
     <string name="time_day">день</string>
@@ -162,10 +157,8 @@
     <string name="time_second">секунда</string>
 
     <string name="remove_selected_confirmation">Вы действительно хотите удалить выделенные торренты?</string>
-    <string name="delete_selected_confirmation">Вы действительно хотите удалить торрент и все данные, связанные с ним?</string>
-
     <string name="remove_current_confirmation">Вы уверены, что хотите удалить \'%s\'?</string>
-    <string name="delete_current_confirmation">Вы действительно хотите удалить данные \'%s\'?</string>
+    <string name="remove_with_data">Удалить с данными</string>
 
     <string name="torrent_have_format">%1$s из %2$s (%3$s%%)</string>
     <string name="torrent_size_format">%1$s (%2$s частей @ %3$s)</string>
@@ -265,7 +258,6 @@
     <string name="tracker_filters">Фильтр по трекерам</string>
 
     <string name="show_tracker_filters">Показывать фильтр по трекерам</string>
-	
     <string name="show_untracked_filter">Показывать торренты без трекеров</string>
 
     <string name="sort_visibility">Использовать следующие методы сортировки в настройке фильтров</string>
@@ -458,6 +450,7 @@
     <string name="update_checking">Проверка …</string>
     <string name="crash_title"><![CDATA[<h2>К сожалению, Gear Shift перестал работать.</h2><small>Хотите отправить по почте отчет об ошибке?</small>]]></string>
     <string name="crash_send">Отправить</string>
+    <string name="sort">Сортировка</string>
 
     <string-array name="torrent_priority">
         <item>Низкий</item>
