--- a/gearshift/src/main/res/values/strings.xml
+++ b/gearshift/src/main/res/values/strings.xml
@@ -108,7 +108,7 @@
     <string name="no_profiles">No profiles</string>
     <string name="create_profile_in_settings">Create a new profile in the settings</string>
     
-    <string name="no_profiles_empty_list">&lt;h2&gt;No profile seems to have been created yet.&lt;/h2&gt;You should add one by visiting the &lt;i&gt;settings&lt;/i&gt;.</string>
+    <string name="no_profiles_empty_list"><![CDATA[<h2>No profile seems to have been created yet.</h2>You can add profiles by visiting the <i>settings</i> in the navigation drawer, or by pressing the button below.]]></string>
     <string name="connecting_empty_list"><![CDATA[<h2><font color="#666666">Connecting</font></h2>]]></string>
     <string name="no_torrents_empty_list">&lt;h2&gt;You are connected!&lt;/h2&gt;You may want to add at least one torrent.</string>
     <string name="no_filtered_torrents_empty_list">No torrents match the current filter</string>
