Small cosmetic fixes in russian translation, added some new name strings, updated to version 0.9.96 #2

--- a/gearshift/src/main/res/values-ru/strings.xml
+++ b/gearshift/src/main/res/values-ru/strings.xml
@@ -205,9 +205,9 @@
     <string name="about_name">Gear Shift</string>
     <string name="app_icon">App icon</string>
     <string name="about_description">Gear Shift - многофункциональный клиент, предназначенный для удалённого управления демоном Transmission.</string>
-    <string name="about_contact">If you find any bugs, please write a post in the <![CDATA[<a href="https://plus.google.com/communities/115768021623513120266">Gear Shift G+ community</a>]]>, filed under bugs. Doing so will also show other people whether the bug has been reported already. Be sure to turn on the \'Debug\' options under \'General Settings\', and include the logcat related to the app.</string>
-    <string name="about_donation">This app is provided for free, without any annoying ads. If you find it useful, consider <![CDATA[<a href="https://www.paypal.com/bg/cgi-bin/webscr?cmd=_donations&business=support@sugr.org&lc=US&item_name=Gear Shift&no_note=1&no_shipping=1&currency_code=EUR">sending a beer or two this way</a>]]>.</string>
-    
+    <string name="about_contact">Если Вы нашли ошибку, пожалуйста сообщите об этом здесь: <![CDATA[<a href="https://plus.google.com/communities/115768021623513120266">Сообщество Gear Shift G+</a>]]>, в теме об ошибках, с приложением отладочных логов. Это будет свидетельствовать о том, что действительно ошибка существует. Убедитесь, что у Вас включена опция \'Отладка\' в \'Основных настройках\'.</string>
+    <string name="about_donation">Это приложение предоставляется бесплатно, без какой-либо раздражающей рекламы и объявлений. Если Вы считаете эту программу полезной, Вы можете <![CDATA[<a href="https://www.paypal.com/bg/cgi-bin/webscr?cmd=_donations&business=support@sugr.org&lc=US&item_name=Gear Shift&no_note=1&no_shipping=1&currency_code=EUR">отблагодарить автора таким образом</a>]]>.</string>
+   
     <string name="ic_menu_select_all">Выделить все</string>
     
     <string name="duplicate_torrent">Этот торрент уже есть в списке.</string>
