--- a/gearshift/src/main/res/values/strings.xml
+++ b/gearshift/src/main/res/values/strings.xml
@@ -213,6 +213,7 @@
     <string name="duplicate_torrent">This torrent is already in the list.</string>
     <string name="invalid_torrent">The torrent being added is invalid or corrupt.</string>
     <string name="error_title">Error!</string>
+    <string name="torrent_added_different_profile">Torrent added</string>
     <string name="menu_high_priority">High priority</string>
     <string name="menu_normal_priority">Normal priority</string>
     <string name="menu_low_priority">Low priority</string>
@@ -437,6 +438,7 @@
     <string name="show_status_bar">Status bar below the torrent list</string>
     <string name="error_deleting_torrent_file">Unable to delete torrent file</string>
     <string name="hint_download_directory">Download directory</string>
+    <string name="spinner_default_directory">Default directory</string>
     <string name="spinner_custom_directory">Custom directory &#8230;</string>
     <string name="error_removing_profile">Error while removing profile!</string>
     <string name="session_settings_enable_idle_seeding_limit">Enable idle seeding limit</string>
@@ -451,6 +453,8 @@
     <string name="crash_title"><![CDATA[<h2>Unfortunately, Gear Shift has stopped.</h2><small>Would you like to email a crash report?</small>]]></string>
     <string name="crash_send">Send</string>
     <string name="sort">Sort</string>
+    <string name="dialog_location">Location</string>
+    <string name="dialog_profile">Profile</string>
 
     <string-array name="torrent_priority">
         <item>Low</item>
