--- a/gearshift/src/main/res/values/strings.xml
+++ b/gearshift/src/main/res/values/strings.xml
@@ -459,6 +459,12 @@
     <string name="sort">Sort</string>
     <string name="dialog_location">Location</string>
     <string name="dialog_profile">Profile</string>
+    <string name="queue_management">Queue management</string>
+    <string name="queue_management_title">Change queue position</string>
+    <string name="queue_top">Move to the top of the queue</string>
+    <string name="queue_up">Move up from the current position</string>
+    <string name="queue_down">Move down from the current position</string>
+    <string name="queue_bottom">Move to the bottom of the queue</string>
 
     <string-array name="torrent_priority">
         <item>Low</item>
